apps/jenkins/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: jenkins/jenkins:2.529
          ports:
            - containerPort: 8080
              name: webui
            - containerPort: 50000
              name: jnlp
          volumeMounts:
            - name: data-volume
              mountPath: /var/jenkins_home
              subPath: jenkins
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
