apps/jenkins/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: webui
    - protocol: TCP
      port: 50000
      targetPort: 50000
      name: jnlp
  type: ClusterIP
